python3.11 (3.11.0-1pexip1) pexip; urgency=medium

  * Prepare Pexip packaging
  * Build against libssl1.0

 -- Huw Jones <huw@pexip.com>  Tue, 01 Nov 2022 11:25:29 +0000

python3.11 (3.11.0-1) unstable; urgency=medium

  * Python 3.11.0 release.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Mon, 24 Oct 2022 23:26:25 +0200

python3.11 (3.11.0~rc2-2) unstable; urgency=medium

  [ Stefano Rivera ]
  * autopkgtests: Support python3-setuptools >= 64, which does PEP-660
    editable installs.

 -- Matthias Klose <doko@debian.org>  Sat, 01 Oct 2022 06:34:05 +0200

python3.11 (3.11.0~rc2-1) unstable; urgency=medium

  * Python 3.11.0 release candidate 2.

 -- Matthias Klose <doko@debian.org>  Mon, 12 Sep 2022 18:20:24 +0200

python3.11 (3.11.0~rc1-1) unstable; urgency=medium

  * Python 3.11.0 release candidate 1.
  * Add python3.11-venv as a dependency for the testsuite* autopkg tests.
  * Don't run the cppext test during the build.
  * Fix two site and sysconfig tests.

 -- Matthias Klose <doko@debian.org>  Wed, 10 Aug 2022 13:16:05 +0200

python3.11 (3.11.0~b4-2) unstable; urgency=medium

  * Work around https://github.com/pypa/pip/issues/11183.

 -- Matthias Klose <doko@debian.org>  Wed, 20 Jul 2022 12:00:00 +0200

python3.11 (3.11.0~b4-1) unstable; urgency=medium

  * Python 3.11.0 beta 4 snapshot.
  * Fix more references to 3.11 in the autopkg tests.
  * Update local-doc-references patch for 3.11.
  * Remove i386 specific symbols files.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Wed, 13 Jul 2022 11:00:16 +0200

python3.11 (3.11.0~b3-2) unstable; urgency=medium

  * Update symbols files for i386.

 -- Matthias Klose <doko@debian.org>  Thu, 09 Jun 2022 16:59:45 +0200

python3.11 (3.11.0~b3-1) unstable; urgency=medium

  * Python 3.11.0 beta 3 snapshot.
  * Refresh patches.
  * Update symbols files.
  * Adjust the minimal set (re now a package), make the ntpath import
    conditional.
  * Update autopkg tests for 3.11.
